RESOLVED FIXED270869
Cannot manage extension storage with WebKit extensions in Safari
https://bugs.webkit.org/show_bug.cgi?id=270869
Summary Cannot manage extension storage with WebKit extensions in Safari
Kiara Rose
Reported 2024-03-12 12:14:42 PDT
Attachments
Kiara Rose
Comment 1 2024-03-12 12:52:26 PDT
EWS
Comment 2 2024-03-12 14:47:08 PDT
Committed 275999@main (51b371557ac7): <https://commits.webkit.org/275999@main> Reviewed commits have been landed. Closing PR #25787 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.