Source/WebKit/UIProcess/API/Cocoa/_WKWebExtensionControllerConfigurationPrivate.h
@@ -48,7 +48,7 @@ NS_ASSUME_NONNULL_BEGIN
  @discussion This property contains the file path to the storage directory used by the configuration. It is `nil` for non-persistent
  configurations. For persistent configurations, it provides the path where data is stored, which may be a temporary directory.
 */
-@property (nonatomic, readonly, copy, nullable) NSString *_storageDirectoryPath;
+@property (nonatomic, nullable, copy, setter=_setStorageDirectoryPath:) NSString *_storageDirectoryPath;
 
 @end
 
